Fix(static page): Typo in the English about page.

--- a/templates/static/en/about.html
+++ b/templates/static/en/about.html
@@ -161,8 +161,7 @@
                     </span>
                     </section>
                 <section class="historyItem">
-                    <span class="int-en">U
-                        sing Sefaria’s database and API, independent developers around the world create 12 third-party <a
+                    <span class="int-en">Using Sefaria’s database and API, independent developers around the world create 12 third-party <a
                             href="https://github.com/Sefaria/Sefaria-Project/wiki/Projects-Powered-by-Sefaria">apps</a>.
                     </span>
                 </section>
