fix: Repair broken links and images on Steinsaltz bio page

--- a/templates/static/adin-even-israel-steinsaltz.html
+++ b/templates/static/adin-even-israel-steinsaltz.html
@@ -31,7 +31,7 @@
 
 <div class="int-en">
 
-<img src="http://www.hashefa.co.il/sysvault/docsfiles1026/cd5a1a983c-db29-49cd-914d-a20af3fc03f9.jpg" />
+<img src="/static/img/RabbiSteinsaltz.jpg" alt="Rabbi Adin Even-Israel Steinsaltz"/>
 
     <p>
         Towering scholar, teacher, philosopher, mystic, scientist, social critic and prolific author, Rabbi Adin Even-Israel Steinsaltz was internationally regarded as one of the leading rabbis of the 20th/21st centuries. Rabbi Steinsaltz took the study of the Talmud out from behind closed doors and gave it to all of us through his monumental work of translation and commentary on the <a href="https://steinsaltz.org/talmud/" target="_blank" >Talmud</a>.
@@ -40,7 +40,7 @@
         Continuing his work as a teacher and spiritual mentor, Rabbi Steinsaltz established a network of schools and educational institutions in Israel. In 1988, he was invited to open a Judaic Studies Center in Moscow, the first such institution in sixty years, and to supervise the inventory and replication of the Soviet Union's vast libraries and archives of Judaica. In the same year, Rabbi Steinsaltz was awarded the Israel Prize, Israel's highest honor, in recognition of his lifelong achievements in Jewish education.
     </p>
     <p>
-        The Rabbi authored some sixty <a href="https://steinsaltz.org/books/" target="_blank">books</a>, including his widely acclaimed book on the Lubavichter Rebbe "My Rebbe" and wrote hundreds of <a href="https://steinsaltz.org/essays/" target="_blank">articles</a> on varied subjects ranging from theology and Jewish practice, through a celebrated work of mystical thought (<a href="http://www.korenpub.com/EN/products/Steinsaltz/4/9781592643011" target="_blank">The Thirteen Petalled Rose</a>), to zoology and social commentary. During his lifetime, Rabbi Steinsaltz presided over several educational institutions, and was a renowned speaker who was sought after by numerous institutes around the world, to impart and share his knowledge and teachings.
+        The Rabbi authored some sixty <a href="https://steinsaltz.org/books/" target="_blank">books</a>, including his widely acclaimed book on the Lubavichter Rebbe "My Rebbe" and wrote hundreds of <a href="https://steinsaltz.org/essays/" target="_blank">articles</a> on varied subjects ranging from theology and Jewish practice, through a celebrated work of mystical thought (<a href="https://steinsaltz.org/books/thirteenpetalledrose/" target="_blank">The Thirteen Petalled Rose</a>), to zoology and social commentary. During his lifetime, Rabbi Steinsaltz presided over several educational institutions, and was a renowned speaker who was sought after by numerous institutes around the world, to impart and share his knowledge and teachings.
     </p>
     <p>
         Born in Jerusalem in 1937 to secular parents, Rabbi Steinsaltz studied physics and chemistry at the Hebrew University. At the age of 24, he became the youngest school principal in Israel. Rabbi Steinsaltz's extraordinary resume includes his having been a resident scholar at Yale University, the Institute for Advanced Studies at Princeton and the Woodrow Wilson Center for International Studies in Washington, D.C. His honorary degrees include doctorates from Ben Gurion University of the Negev, Bar Ilan University, Brandeis University, Yeshiva University and Florida International University.
@@ -60,12 +60,12 @@
 
 <div class="int-he">
 
-<img src="http://www.hashefa.co.il/sysvault/docsfiles1026/cd5a1a983c-db29-49cd-914d-a20af3fc03f9.jpg" />
+    <img src="/static/img/RabbiSteinsaltz.jpg" alt="הרב עדין אבן ישראל (שטיינזלץ)"/>
 <p>הרב עדין אבן־ישראל שטיינזלץ היה עילוי בתחומים רבים ומגוונים: בתורה, בהוראה, בפילוסופיה, בקבלה במדע ובביקורת חברתית ויוצר פורה, שזכה להכרה חוצת יבשות כאחד הרבנים המובילים והחשובים במאה העשרים ובמאה הנוכחית. בזכות יצירתו מעוררת ההשתאות של תרגום ופירוש התלמוד הצליח הרב שטיינזלץ להפיל את החומות הגבוהות שהקיפו את לימוד התלמוד ולמסור אותו לכולנו.
 </p>
     <p>בהמשך לעבודתו כמחנך וכמורה רוחני הקים הרב שטיינזלץ רשת של בתי ספר ומוסדות חינוך בישראל. בשנת 1988 נקרא למוסקבה כדי לפתוח מרכז ללימודי יהדות, הראשון מסוגו זה שישים שנה, ולפקח על המצאי של ספרים נדירים בספריות הענק היהודיות ובארכיונים היהודיים בברית המועצות. באותה השנה זכה הרב בפרס ישראל, עיטור הכבוד הנחשב ביותר במדינת ישראל, כאות הוקרה על מפעלי החינוך היהודי הרבים שייסד במהלך חייו.
     </p>
-    <p>הרב שטיינזלץ חיבר כשישים <a href="https://steinsaltz.org/books/" target="_blank" >ספרים</a>, בהם הכותר "הרבי שלי" שעסק ברבי מלובביץ' וזכה להערכה רבה. הוא כתב מאות <a href="https://steinsaltz.org/essays/" target="_blank" >מאמרים</a> במגוון נושאים – החל בתאולוגיה ובהלכה, דרך הקבלה (דוגמת הספר הנודע <a href="https://korenpub.com/EN/products/Steinsaltz/4/9781592643011" target="_blank" >"שלושה־עשר עלי השושנה"</a>) וכלה בזואולוגיה ובפרשנות חברתית. לאורך חייו עמד הרב בראשם של מוסדות חינוכיים אחדים והיה למרצה ידוע ומבוקש במוסדות רבים בעולם, שהפצירו בו להגיע אליהם כדי לחלוק מחוכמתו ומתורתו.
+    <p>הרב שטיינזלץ חיבר כשישים <a href="https://steinsaltz.org/books/" target="_blank" >ספרים</a>, בהם הכותר "הרבי שלי" שעסק ברבי מלובביץ' וזכה להערכה רבה. הוא כתב מאות <a href="https://steinsaltz.org/essays/" target="_blank" >מאמרים</a> במגוון נושאים – החל בתאולוגיה ובהלכה, דרך הקבלה (דוגמת הספר הנודע <a href="https://korenpub.co.il/products/the-thirteen-petalled-rose-h" target="_blank" >"שלושה־עשר עלי השושנה"</a>) וכלה בזואולוגיה ובפרשנות חברתית. לאורך חייו עמד הרב בראשם של מוסדות חינוכיים אחדים והיה למרצה ידוע ומבוקש במוסדות רבים בעולם, שהפצירו בו להגיע אליהם כדי לחלוק מחוכמתו ומתורתו.
     </p>
     <p>הרב שטיינזלץ נולד בירושלים בשנת 1937 להורים לא דתיים. הוא למד פיזיקה וכימיה באוניברסיטה העברית ובגיל עשרים וארבע היה למנהל בית הספר הצעיר ביותר בישראל. בחייו יוצאי הדופן הספיק הרב לשמש מרצה אורח באוניברסיטת יל, במוסד ללימודים מתקדמים בפרינסטון ובמרכז הבינלאומי לחוקרים על שם וודרו וילסון בוושינגטון הבירה. הרב קיבל תוארי דוקטור לשם כבוד מאוניברסיטאות בן־גוריון בנגב, בר־אילן וברנדייס, מישיבה יוניברסיטי ומהאוניברסיטה הבינלאומית בפלורידה.
     </p>
