load samaritan font from google instead of static/fonts

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,12 @@
             families: ['Roboto:300,400,700', 'Heebo:300,400,700:hebrew'] // The dotted h causes Heebo not to load.
           }
         });
+        WebFont.load({
+          google: {
+            families: ['Noto Sans Samaritan'],
+            text: 'ࠀࠁࠂࠃࠄࠅࠆࠇࠈࠉࠊࠋࠌࠍࠎࠏࠐࠑࠒࠓࠔࠕ'
+          }
+        });
     </script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
 
