static (team): Team page addition

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -59,6 +59,19 @@
                     </div>
                     <div class="teamMember">
                         <div class="teamMemberImage">
+                            <img src="{% static 'img/headshots/sarit.png' %}" alt="Headshot of Sarit Dubin">
+                        </div>
+                        <div class="teamMemberDetails">
+                            <div class="teamName">
+                                <span class="int-en">Sarit Dubin</span>
+                            </div>
+                            <div class="teamTitle">
+                                <span class="int-en">Director of Marketing and Communications</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="teamMember">
+                        <div class="teamMemberImage">
                             <img src="{% static 'img/headshots/yishai.png' %}" alt="Headshot of Yishai Glasner">
                         </div>
                         <div class="teamMemberDetails">
