static (team): Team page fix

--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -76,7 +76,7 @@
                                 <span class="int-he">שרית דובין</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהלת תקשורת ושיווק</span>
+                                <span class="int-he">מנהלת תקשורת בכירה</span>
                             </div>
                         </div>
                     </div>
