--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -313,7 +313,7 @@
                                 <span class="int-en">Chava Tzemach</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Director of Marketing and Communications</span>
+                                <span class="int-en">Senior Communications Manager</span>
                             </div>
                         </div>
                     </div>
