static (team): Team page corrections

--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -37,7 +37,7 @@
                                 <span class="int-he">חנה גולדברגר</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהלת גיוס משאבים ומענקים</span>
+                                <span class="int-he">מנהלת אגף דיגיטל לגיוס כספים ומענקים</span>
                             </div>
                         </div>
                     </div>
@@ -273,7 +273,7 @@
                                 <span class="int-he">חוה צמח</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">מנהלת תקשורת ושיווק בכירה</span>
+                                <span class="int-he">מנהלת אגף תקשורת ושיווק</span>
                             </div>
                         </div>
                     </div>
