static (team): Team page update

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -144,7 +144,7 @@
                                 <span class="int-en">Haleli Jabotinsky</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Hebrew Communications and Editorial Associate </span>
+                                <span class="int-en">Hebrew Communications Associate</span>
                             </div>
                         </div>
                     </div>
