--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -156,7 +156,7 @@
                                 <span class="int-he">הללי ז'בוטינסקי</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכזת מדיה ועריכת תוכן</span>
+                                <span class="int-he">רכזת תקשורת ומדיה</span>
                             </div>
                         </div>
                     </div>
