static (team): Team page update

--- a/templates/static/en/team.html
+++ b/templates/static/en/team.html
@@ -235,7 +235,7 @@
                                 <span class="int-en">Elise Ringo</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-en">Associate Marketing Manager</span>
+                                <span class="int-en">Associate Digital Marketing Manager</span>
                             </div>
                         </div>
                     </div>
