--- a/templates/static/he/team.html
+++ b/templates/static/he/team.html
@@ -325,7 +325,7 @@
                                 <span class="int-he">יעל רינגו</span>
                             </div>
                             <div class="teamTitle">
-                                <span class="int-he">רכזת שיווק</span>
+                                <span class="int-he">רכזת שיווק דיגיטלי</span>
                             </div>
                         </div>
                     </div>
