Fix (modal): unbold text in modal.

--- a/templates/messages/2022-07-25-Ab-testing-modal-1A.html
+++ b/templates/messages/2022-07-25-Ab-testing-modal-1A.html
@@ -63,7 +63,7 @@
     }
 
 </style>
-<div id="highHolidayDonation" style="font-weight: bold">
+<div id="highHolidayDonation">
 
     <p>
         <span class="int-en">Friend,</span>
