--- a/templates/static/rabbis.html
+++ b/templates/static/rabbis.html
@@ -14,6 +14,9 @@
     {% autoescape off %}
     DJANGO_VARS.containerId = 'RabbisInner';
     DJANGO_VARS.reactComponentName = 'RabbisPage';
+    if (Sefaria.interfaceLang == "hebrew") {
+        window.location.replace('/educators')
+    }
     {% endautoescape %}
 </script>
 {% endblock %}
