Feat (modals): css hebrew changes.

--- a/templates/messages/2022-8-10-email-test-A.html
+++ b/templates/messages/2022-8-10-email-test-A.html
@@ -76,6 +76,10 @@
         align-items: flex-start;
         flex-direction: column;
     }
+    .interface-hebrew .email-input-wrapper.int-en {
+        display: none;
+    }
+
     .newsletterInput#email-input {
         width: 200px;
         padding: 10px;
