Fix(loading): rtl spelling mistake.

--- a/templates/elements/loading.html
+++ b/templates/elements/loading.html
@@ -9,8 +9,8 @@
       <br>
       {% endif %}
       <div class="smallText">
-      	<span class="int-he">...טעינה</span>
+      	<span class="int-he">טעינה...</span>
       	<span class="int-en">Loading...</span>
-      </span>
+        </div>
     </div>
 </div>
