fix(modals): Changed css to center text

--- a/templates/messages/2022-8-10-modal-newsletter-A.html
+++ b/templates/messages/2022-8-10-modal-newsletter-A.html
@@ -8,7 +8,7 @@
       background-color: var(--sefaria-blue);
     }
     #interruptingMessage {
-        padding: 18px 0px;
+        padding: 20px 0px;
         background-color: var(--sefaria-blue);
     }
     #interruptingMessageContentBox.hasColorLine{
@@ -25,11 +25,8 @@
         max-height: 100%;
         max-width: 100%;
     }
-    .interface-english #highHolidayDonation {
-        text-align: left;
-    }
     .interface-hebrew #highHolidayDonation {
-        text-align: right;
+        {#text-align: right;#}
         direction: rtl;
     }
 
@@ -46,6 +43,8 @@
         font-size: 43px;
         font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
         font-style: normal;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     #highHolidayDonation p {
