--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,11 @@
         WebFont.load({
           google: {
             families: ['Noto Sans Samaritan'],
-            text: 'ࠀࠁࠂࠃࠄࠅࠆࠇࠈࠉࠊࠋࠌࠍࠎࠏࠐࠑࠒࠓࠔࠕ'
+          }
+        });
+        WebFont.load({
+          google: {
+            families: ['Cardo'],
           }
         });
     </script>
