static(jobs): Update open positions

--- a/templates/static/jobs.html
+++ b/templates/static/jobs.html
@@ -42,6 +42,15 @@
             </h3>
             <ul id="jobsLinks" class="serif"></ul>
         </nav>--->
+        
+        <section class="section department englishOnly">
+            <header>
+                <h2 class="anchorable">Operations</h2>
+            </header>
+            <section class="jobsListForDepartment">
+                <div class="job"><a class="jobLink" target="_blank" href="https://sefaria.breezy.hr/p/7c5bd0c219f7-development-associate">Development Associate</a></div>
+            </section>
+        </section>
 
         <!---<section class="section department englishOnly">
             <header>
@@ -72,16 +81,11 @@
         </section>
         <section class="section department englishOnly">
             <header>
-                <h2 class="anchorable">Operations</h2>
-            </header>
-        </section>
-        <section class="section department englishOnly">
-            <header>
                 <h2 class="anchorable">Israel Team</h2>
             </header>
         </section>--->
         
-        <div class="section nothing">
+        <!---<div class="section nothing">
             <p>
                 <span class="int-en">
                     Sefaria does not currently have any open positions.
@@ -94,7 +98,7 @@
                     כדי להשאר מעודכנים במשרות עתידיות.
                 </span>
             </p>
-        </div>
+        </div>--->
 
         <aside class="solicitationNotice">
             <p>
